# CPP-OpenGL-Templates

./: LICENSE  README.md
2D/: README.md  main.cpp
2D/binary/: README.md
3D/: glad.c  low-poly_door.glb  meson.build  opengl.cpp
3D/include/glad/: glad.h
